# WISA_proj

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
ctkat/: _proc.py  asm_scan.py  builder.py  cli.py  config.py  coverage_check.py  ct_matrix.py  ct_runner.py  dudect_runner.py  harness_generator.py  header_parser.py  qemu_detect.py  report.py  secret_infer.py  statistics.py  timing_harness_generator.py  triage.py  valgrind_parser.py  valgrind_runner.py  verdict.py  verdict_class.py
ctkat/templates/: harness_generic.c.j2  (+5 more)
docs/: README.md  accepted_variable_time.md  corpus_schema.md  ctkat_direction_roadmap.md  engineering_status.md  go_forward.md  known_issues.md  kyberslash_direction.md  kyberslash_research.html  paper_outline.md  report_tables.md  tutorial.md
paper/: .gitignore  README.md  camera_ready_status.md  main.tex  references.bib
scripts/: build_corpus_table.py  build_paper_pdf.sh  dev.sh  fetch_pqclean.sh  refresh_corpus_docker.sh  render_paper_tables.py  reproduce_paper_tables.sh  run_check.sh  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh
tests/: test_asm_scan.py  test_build_corpus_table.py  test_cli.py  test_config.py  test_coverage_check.py  test_ct_matrix.py  test_ct_runner.py  test_dudect_runner.py  test_harness_generator.py  test_header_parser.py  test_kyberslash_artifact.py  test_paper_corpus_sync.py  test_parser.py  test_proc.py  test_qemu_detect.py  test_secret_infer.py  test_statistics.py  test_timing_harness.py  test_triage.py  test_verdict.py  test_verdict_class.py
(+81 files in other folders)
