[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctkat"
version = "0.1.0"
description = "KAT + Valgrind based constant-time check framework"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "jinja2>=3",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ctkat = "ctkat.cli:app"

[tool.setuptools.packages.find]
include = ["ctkat*"]
exclude = ["tests*", "examples*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
